# taxi-driver

./: .gitignore  .wslconfig  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start-dev.sh  start-fast.sh  start-rebuild.sh
app/api/: __init__.py  database.py  main.py  models.py
app/api/routes/: database_routes.py
app/api/schemas/: database.py  sarsa.py
app/api/services/: __init__.py  base_agent.py  database_service.py  sarsa.py
app/schemas/: __init__.py  common.py  sarsa.py
app/services/: base_agent.py  sarsa.py
assets/images/sarsa/: .gitkeep
config/: .env.example  settings.py
docs/architecture/: README_DATABASE.md
frontend/: README.md  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  RunsTable.tsx  StatisticsCards.tsx  TrainingForm.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
infrastructure/database/: init-db.sql
infrastructure/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
models/sarsa/: .gitkeep
scripts/: fix_plot_paths.py  init_app.py  start.sh
tests/integration/: test_database.py
